--- a/BackEnd/tsconfig.json
+++ b/BackEnd/tsconfig.json
@@ -3,8 +3,11 @@
     "target": "ES6",
     "module": "CommonJS",
     "outDir": "./dist",
-    "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["./*.ts", "tests/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
