Implemented Frontend CRUD Operations for Vehicles and Improved Error Handling
- Developed the frontend interface to manage vehicles, including functionality for creating, updating, and retrieving vehicle data.
- Integrated dynamic forms and modals to support CRUD operations seamlessly.
- Designed and implemented reusable components such as VehicleTable and EditVehicleModal.
- Added global error handling with user-friendly notifications to ensure consistent feedback across the application.
- Enhanced the user experience with search functionality, status filters, and responsive design elements.

--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -5,6 +5,10 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "module": "ESNext", // or "ES6"
+    "target": "ESNext", // or "ES6"
+    "esModuleInterop": true,
+    "moduleResolution": "Node",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
