Add e2e and component tests for vehicle management app
- Added e2e tests for adding and editing vehicles.
- Implemented component tests for main components of the app.
- Ensured robust error handling and validation in tests.
- Updated TypeScript configuration to support Cypress.

--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -5,8 +5,9 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "module": "ESNext", // or "ES6"
-    "target": "ESNext", // or "ES6"
+    "types": ["cypress"],
+    "module": "ESNext",
+    "target": "ESNext",
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "baseUrl": ".",
@@ -19,5 +20,6 @@
     "allowJs": true,
     "noUnusedLocals": false,
     "strictNullChecks": false
-  }
+  },
+  "include": ["cypress/support/index.d.ts"]
 }
