add the front end url in the backend cors and change the back end from the lockal to online

--- a/BackEnd/src/.env
+++ b/BackEnd/src/.env
@@ -1,7 +1,5 @@
-LOCAL_DATABASE=mongodb://127.0.0.1:27017/vehicle-app
-
-
 PORT=3000
 
-# DATABASE=mongodb+srv://fekedeananiya:<PASSWORD>@cluster0.huzyg.mongodb.net/
-# DATABASE_PASSWORD=lzmvzONEgQfhk2cB
+LOCAL_DATABASE=mongodb://127.0.0.1:27017/vehicle-app
+DATABASE=mongodb+srv://fekedeananiya:<PASSWORD>@cluster0.4kyt5.mongodb.net/vehicle-app
+DATABASE_PASSWORD=tUmLefwW0r9LHL3R
