--- a/BackEnd/tsconfig.json
+++ b/BackEnd/tsconfig.json
@@ -8,6 +8,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*.ts", "tests/**/*.ts"],
+  "include": ["./src/*.ts", "tests/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
