--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start:dev": "cross-env NODE_ENV=development nodemon src/server.ts",
     "build": "cross-env NODE_ENV=production tsc",
-    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
+    "start:prod": "NODE_ENV=production node dist/index.js",
     "test": "jest --testTimeout 20000",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write ."
