--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,8 +4,8 @@
   "main": "src/server.ts",
   "scripts": {
     "start:dev": "cross-env NODE_ENV=development nodemon src/server.ts",
-    "build": "NODE_ENV=production tsc",
-    "start:prod": "NODE_ENV=production node dist/index.js",
+    "build": "cross-env NODE_ENV=production tsc",
+    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "test": "jest --testTimeout 20000",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write ."
