--- a/FrontEnd/netlify.toml
+++ b/FrontEnd/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "/api/*"
-  to = "https://vehicle-management-systems-api.onrender.com/api/:splat"
-  status = 200
+  from = "http://*"
+  to = "https://:splat"
+  status = 301
   force = true
